disabled button during processing

--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
             </div>
 
             <div class="msg">
-                <div class="msg-content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatibus et nisi, corporis
-                    voluptas dignissimos dolore nesciunt facilis, maxime itaque suscipit vitae porro quisquam maiores
-                    sed aperiam, architecto rem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis sit
-                    vel nos
-                </div>
+                <div class="msg-content"></div>
 
                 <button onclick="hideThis()">Close</button>
             </div>
